--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,6 +3,6 @@ const path = require("path");
 module.exports = {
     'config': path.resolve('./src/config', 'config.json'),
     'migrations-path' : path.resolve('./src','migrations'),
-    'model-path' : path.resolve('./src','models'),
+    'models-path' : path.resolve('./src','models'),
     'seeders-path' : path.resolve('./src','seeders') 
 }
