--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "otp": "^1.1.0",
     "sequelize": "^6.2.0",
     "uuid": "^9.0.0"
   },
