--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "otp": "^1.1.0",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.1",
     "sequelize": "^6.2.0",
     "uuid": "^9.0.0"
   },
